--- a/siscop-caritas-web/src/main/webapp/mattoCuentas/index.xhtml
+++ b/siscop-caritas-web/src/main/webapp/mattoCuentas/index.xhtml
@@ -43,7 +43,7 @@
                                     paginator="true" 
                                     rows="5"
                                     expandableRowGroups="true"
-                                    sortBy="#{cta.idctapadre.id}"
+                                    sortBy="#{cta.codigoctapadre.codigo}"
                                     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                     currentPageReportTemplate="(Mostrando del: {startRecord} al {endRecord} de {totalRecords})"
                                     rowsPerPageTemplate="5,10,15" 
@@ -57,7 +57,7 @@
                                             />
                                     <p:headerRow>
                                         <p:column colspan="2">
-                                            <h:outputText value="#{cta.idctapadre.nombre}" />
+                                            <h:outputText value="#{cta.codigoctapadre.codigo}" />
                                         </p:column>
                                     </p:headerRow>
                                     <p:column headerText="Codigo">
